18363
+What went wrong+
The test code compiled and ran without issues 
{quote}
scalac ./test.scala && scala -cp . Test 
{quote}
but when loaded via the REPL ":load test.scala" it would bark: 
{quote}scala> :load test.scala
Loading test.scala...
defined trait A
defined class B
defined trait C
<console>:13: error: illegal inheritance;
 self-type B with C does not conform to B's selftype B with C
           val b  = new B with C
                        ^{quote}

+What it should have been+
Expecting the test code to compile and run from command line, REPL

+Work around+
Copy pasting the contents of test code into REPL works
